--- a/public/login.html
+++ b/public/login.html
@@ -19,11 +19,10 @@
     <nav>
         <ul>
             <li><a href="home.html">Accueil</a></li>
-        
         </ul>
     </nav>
     <h1>Connexion</h1>
-    <form id="loginForm">
+    <form id="login-form">
         <label for="identifier">Nom d'utilisateur ou Adresse mail :</label>
         <input type="text" id="identifier" name="identifier" required><br><br>
 
