--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <nav>
         <ul>
             <li><a href="home.html">Accueil</a></li>
-        
+
         </ul>
     </nav>
     <h1>Inscription</h1>
@@ -40,6 +40,7 @@
 
     <script src="script.js"></script>
     <script>
+        // Ajouter un écouteur d'événements pour rediriger vers la page de connexion
         document.getElementById('loginButton').addEventListener('click', function() {
             window.location.href = 'login.html';
         });
