--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inscription</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/public/assets/css/styles.css">
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const user = JSON.parse(localStorage.getItem('user'));
@@ -44,5 +44,48 @@
             window.location.href = 'login.html';
         });
     </script>
+    <footer>
+
+        <div class="container__footer">
+            <div class="box__footer">
+                <div class="logo">
+                    <img src="/public/assets/img/logo.png" alt="">
+                </div>
+                <div class="terms">
+                    <p>Welcome to TrendyTalkForum.com, a place to discuss and share knowledge on mood. Join our community to connect with like-minded individuals and expand your understanding.</p>
+                </div>
+            </div>
+            <div class="box__footer">
+                <h2>solutions</h2>
+                <a href="https://www.google.com">App </a>
+                <a href="#">App Marketing</a>
+                <a href="#">IOS </a>
+                <a href="#">Android</a>
+            </div>
+            <div class="box__footer">
+                
+                <h2>Quick Links</h2>
+                <a href="#">Home</a>
+                <a href="#">Categories</a>
+                <a href="#">Popular Topics</a>
+                <a href="#">Help/FAQ</a>              
+            </div>
+
+            <div class="box__footer">
+                <h2>socail media</h2>
+                <a href="#"> <i class="fab fa-facebook-square"></i> Facebook</a>
+                <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
+                <a href="#"><i class="fab fa-linkedin"></i> Linkedin</a>
+                <a href="#"><i class="fab fa-instagram-square"></i> Instagram</a>
+            </div>
+
+        </div>
+
+        <div class="box__copyright">
+            <hr>
+            <p> © 2024 <b>TrendyTalkForum</b></p>
+        </div>
+    </footer>
+
 </body>
 </html>
