--- a/public/create-topic.html
+++ b/public/create-topic.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Créer un Topic</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="home.html">Accueil</a></li>
+            <li><a href="create-topic.html">Créer un Topic</a></li>
+            <li class="dropdown">
+                <a href="#" id="profile-link">Profil</a>
+                <div class="dropdown-content" id="profile-dropdown">
+                    <!-- Informations du profil seront insérées ici -->
+                </div>
+            </li>
+            <li><a href="#" id="logout">Déconnexion</a></li>
+        </ul>
+    </nav>
     <h1>Créer un Topic</h1>
     <form id="createTopicForm">
         <label for="title">Titre :</label>
