--- a/public/login.html
+++ b/public/login.html
@@ -19,10 +19,11 @@
     <nav>
         <ul>
             <li><a href="home.html">Accueil</a></li>
+        
         </ul>
     </nav>
     <h1>Connexion</h1>
-    <form id="login-form">
+    <form id="loginForm">
         <label for="identifier">Nom d'utilisateur ou Adresse mail :</label>
         <input type="text" id="identifier" name="identifier" required><br><br>
 
@@ -41,47 +42,5 @@
             window.location.href = 'index.html';
         });
     </script>
-    <footer>
-
-        <div class="container__footer">
-            <div class="box__footer">
-                <div class="logo">
-                    <img src="/public/assets/img/logo.png" alt="">
-                </div>
-                <div class="terms">
-                    <p>Welcome to TrendyTalkForum.com, a place to discuss and share knowledge on mood. Join our community to connect with like-minded individuals and expand your understanding.</p>
-                </div>
-            </div>
-            <div class="box__footer">
-                <h2>solutions</h2>
-                <a href="https://www.google.com">App </a>
-                <a href="#">App Marketing</a>
-                <a href="#">IOS </a>
-                <a href="#">Android</a>
-            </div>
-            <div class="box__footer">
-                
-                <h2>Quick Links</h2>
-                <a href="#">Home</a>
-                <a href="#">Categories</a>
-                <a href="#">Popular Topics</a>
-                <a href="#">Help/FAQ</a>              
-            </div>
-
-            <div class="box__footer">
-                <h2>socail media</h2>
-                <a href="#"> <i class="fab fa-facebook-square"></i> Facebook</a>
-                <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
-                <a href="#"><i class="fab fa-linkedin"></i> Linkedin</a>
-                <a href="#"><i class="fab fa-instagram-square"></i> Instagram</a>
-            </div>
-
-        </div>
-
-        <div class="box__copyright">
-            <hr>
-            <p> © 2024 <b>TrendyTalkForum</b></p>
-        </div>
-    </footer>
 </body>
 </html>
