--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inscription</title>
-    <link rel="stylesheet" href="/public/assets/css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const user = JSON.parse(localStorage.getItem('user'));
@@ -25,7 +25,7 @@
             const profilePicInput = document.getElementById('profile_pic');
 
             function updateProfileImage() {
-                profileImageElement.src = `/public/assets/img/profiles/${profileImages[currentProfileIndex]}`;
+                profileImageElement.src = `${profileImages[currentProfileIndex]}`;
                 profilePicInput.value = profileImages[currentProfileIndex];
             }
 
