--- a/public/home.html
+++ b/public/home.html
@@ -12,7 +12,7 @@
             <li><a href="home.html">Accueil</a></li>
             
             <li class="dropdown">
-                <a href="#" id="profile-link">Profil</a>
+                <li><a href="#" id="profile-link">Profil</a></li>
                 <div class="dropdown-content" id="profile-dropdown">
                     <!-- Informations du profil seront insérées ici -->
                 </div>
