--- a/public/home.html
+++ b/public/home.html
@@ -37,6 +37,7 @@
                     <button id="show-all-liked-topics">Voir tous les topics likés</button>
                 </div>
             </div>
+            <div id="requests-popup" class="popup"></div>
             <div id="bot-left-container">
                 <h2 class="text">Popular Topics</h2>
                 <!-- Les topics populaires seront insérés ici -->
@@ -44,10 +45,11 @@
         </div>
         <div id="container-right">
             <div id="create-topic">
+                <div id="user-profile-pic-container"></div>
                 <a id="create" href="create-topic.html">
                     <p id="create-text">Créer un Topic</p>
                 </a>
-            </div>
+            </div>            
             <div id="topics-container">
                 <!-- Les topics seront insérés ici -->
             </div>
@@ -62,7 +64,7 @@
         <div class="container__footer">
             <div class="box__footer">
                 <div class="logo">
-                    <img src="/public/assets/img/logo.png" alt="">
+                    <img src="logo.png" alt="">
                 </div>
                 <div class="terms">
                     <p>Welcome to TrendyTalkForum.com, a place to discuss and share knowledge on mood. Join our community to connect with like-minded individuals and expand your understanding.</p>
