--- a/public/profile.html
+++ b/public/profile.html
@@ -44,6 +44,19 @@
                 <button type="submit">Enregistrer les modifications</button>
             </form>
         </div>
+        <div id="friendsList">
+            <h2>Liste d'amis</h2>
+            <ul id="friendsListContainer"></ul>
+        </div>
     </div>
+    <div id="confirmModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <p>Voulez-vous vraiment supprimer cet ami ?</p>
+            <button id="confirmDelete">Confirmer</button>
+            <button id="cancelDelete">Annuler</button>
+        </div>
+    </div>
+    <script src="profile.js"></script>
 </body>
 </html>
