--- a/public/create-topic.html
+++ b/public/create-topic.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Créer un Topic</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="create-topic.js"></script>
 </head>
 <body>
     <nav>
@@ -36,14 +37,10 @@
         </select><br><br>
         <label for="category">Catégorie :</label>
         <select id="category" name="category">
-            <option value="informatic">Informatique</option>
-            <option value="vgames">Jeux vidéos</option>
-            <option value="sport">Sport</option>
+            <!-- Les catégories seront insérées ici dynamiquement -->
         </select><br><br>
         <input type="hidden" id="author" name="author">
         <button type="submit">Créer</button>
     </form>
-    <script src="create-topic.js"></script>
-    
 </body>
 </html>
