--- a/public/topic.html
+++ b/public/topic.html
@@ -3,35 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Détails du Topic</title>
+    <title>Topic Details</title>
     <link rel="stylesheet" href="styles.css">
+    <script defer src="topic.js"></script>
 </head>
 <body>
     <nav>
         <ul>
             <li><a href="home.html">Accueil</a></li>
-            <li><a href="create-topic.html">Créer un Topic</a></li>
-            <li class="dropdown">
-                <a href="#" id="profile-link">Profil</a>
-                <div class="dropdown-content" id="profile-dropdown">
-                    <!-- Informations du profil seront insérées ici -->
-                </div>
-            </li>
+            <li><a href="profile.html">Profil</a></li>
             <li><a href="#" id="logout">Déconnexion</a></li>
         </ul>
     </nav>
-    <h1 id="topic-title">Titre du Topic</h1>
-    <p id="topic-body">Contenu du Topic</p>
-    <div id="messages-container">
-        <!-- Les messages seront insérés ici -->
+    <div class="topic-container">
+        <h1 id="topic-title"></h1>
+        <p id="topic-body"></p>
+
+        <label for="sort-order">Trier les messages par:</label>
+        <select id="sort-order">
+            <option value="recent">Les plus récents</option>
+            <option value="popular">Les plus populaires</option>
+        </select>
+
+        <div id="messages-container"></div>
+
+        <button id="prev-page">Page précédente</button>
+        <button id="next-page">Page suivante</button>
+
+        <form id="addMessageForm">
+            <textarea id="message-body" required></textarea>
+            <button type="submit">Ajouter un message</button>
+        </form>
     </div>
-
-    <h2>Ajouter un message</h2>
-    <form id="addMessageForm">
-        <textarea id="message-body" name="message-body" required></textarea><br><br>
-        <button type="submit">Ajouter</button>
-    </form>
-
-    <script src="topic.js"></script>
 </body>
 </html>
