little update css

--- a/public/create-topic.html
+++ b/public/create-topic.html
@@ -28,7 +28,7 @@
         <label for="body">Corps :</label>
         <textarea id="body" name="body" required></textarea><br><br>
         <label for="tags">Tags (séparés par des virgules) :</label>
-        <input type="text" id="tags" name="tags"><br><br>
+        <input type="text" id="tags" name="tags" required><br><br>
         <label for="state">État :</label>
         <select id="state" name="state">
             <option value="open">Ouvert</option>
