--- a/public/topic.html
+++ b/public/topic.html
@@ -17,6 +17,11 @@
     </nav>
     <div class="topic-container">
         <h1 id="topic-title"></h1>
+        <div id="topic-details">
+            <img id="topic-author-pic" src="" alt="Photo de profil" class="profile-pic">
+            <p id="topic-author-name"></p>
+            <p id="topic-created-at"></p>
+        </div>
         <p id="topic-body"></p>
 
         <label for="sort-order">Trier les messages par:</label>
