--- a/public/topic.html
+++ b/public/topic.html
@@ -18,7 +18,7 @@
     <div class="topic-container">
         <h1 id="topic-title"></h1>
         <div id="topic-details">
-            <img id="topic-author-pic" src="" alt="Photo de profil" class="profile-pic">
+            <img id="topic-author-pic" class="profile-pic" src="" alt="Profile Picture">
             <p id="topic-author-name"></p>
             <p id="topic-created-at"></p>
         </div>
