--- a/public/home.html
+++ b/public/home.html
@@ -19,7 +19,7 @@
 <body>
     <nav>
         <ul class="nav-left">
-            <li><a href="home.html">Accueil</a></li>
+            <li><a id="logo-link" href="home.html"><img src="logo.png" id="logo">TrendyTalk</a></li>
         </ul>
         <ul class="nav-center">
             <li class="dropdown">
