--- a/public/login.html
+++ b/public/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connexion</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="login.css">
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const user = JSON.parse(localStorage.getItem('user'));
@@ -19,11 +19,6 @@
     <nav>
         <ul>
             <li><a href="home.html">Accueil</a></li>
-<<<<<<< HEAD
-
-=======
-        
->>>>>>> ec09346553d31cf125080833d11402190814b5b5
         </ul>
     </nav>
     <h1>Connexion</h1>
