--- a/public/user-profile.html
+++ b/public/user-profile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profil de l'utilisateur</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="user.css">
 </head>
 <body>
     <nav>
