--- a/public/home.html
+++ b/public/home.html
@@ -27,7 +27,7 @@
                 <div class="dropdown-content" id="categories-dropdown"></div>
             </li>
             <div class="search-bar-container">
-                <input type="text" id="search-bar" placeholder="Rechercher par tags...">
+                <input type="text" id="search-bar" placeholder="Rechercher des titres...">
                 <button id="search-button">Rechercher</button>
                 <button id="reset-search-button" style="display:none;"><img src="croix.webp" id="croix"></button>
             </div>
@@ -71,42 +71,6 @@
         </div>
     </div>
     <script src="home.js"></script>
-    <footer>
-        <div class="container__footer">
-            <div class="box__footer">
-                <div class="logo">
-                    <img src="logo.png" alt="">
-                </div>
-                <div class="terms">
-                    <p>Welcome to TrendyTalkForum.com, a place to discuss and share knowledge on mood. Join our community to connect with like-minded individuals and expand your understanding.</p>
-                </div>
-            </div>
-            <div class="box__footer">
-                <h2>solutions</h2>
-                <a href="https://www.google.com">App </a>
-                <a href="#">App Marketing</a>
-                <a href="#">IOS </a>
-                <a href="#">Android</a>
-            </div>
-            <div class="box__footer">
-                <h2>Quick Links</h2>
-                <a href="#">Home</a>
-                <a href="#">Categories</a>
-                <a href="#">Popular Topics</a>
-                <a href="#">Help/FAQ</a>              
-            </div>
-            <div class="box__footer">
-                <h2>social media</h2>
-                <a href="#"> <i class="fab fa-facebook-square"></i> Facebook</a>
-                <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
-                <a href="#"><i class="fab fa-linkedin"></i> Linkedin</a>
-                <a href="#"><i class="fab fa-instagram-square"></i> Instagram</a>
-            </div>
-        </div>
-        <div class="box__copyright">
-            <hr>
-            <p> © 2024 <b>TrendyTalkForum</b></p>
-        </div>
-    </footer>
+    
 </body>
 </html>
